[workspace]
resolver = "2"
members = ["block_builder", "deterministic_svm", "merkle_tree", "zk_svm"]

[workspace.dependencies]
bincode = "1.3.3"
bs58 = { version = "0.5.1", default-features = false }
byteorder = "1.5.0"
deterministic_svm = { path = "./deterministic_svm" }
enum-iterator = "1.5.0"
lazy_static = "1.5.0"
log = "0.4.25"
num-traits = "0.2.19"
percentage = "0.1.0"
serde = "1.0.217"
sha2 = "0.10.8"
solana-account = "2.1.10"
solana-runtime = "2.1.10"
solana-sdk = "2.1.10"
solana-sbpf = "=0.9.0"
sp1-zkvm = "4.0.1"
