[workspace]
resolver = "2"
members = ["block_builder", "deterministic_svm", "merkle_tree", "zk_svm"]

[workspace.dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
blake3 = "1.5.5"
bs58 = { version = "0.5.1", default-features = false }
bytemuck = "1.21.0"
byteorder = "1.5.0"
curve25519-dalek = "4.1.3"
deterministic_svm = { path = "./deterministic_svm" }
ed25519-dalek = "1.0.1"
enum-iterator = "1.5.0"
five8_const = "0.1.3"
itertools = "0.12.1"
lazy_static = "1.5.0"
libsecp256k1 = "0.6.0"
light-poseidon = "0.2.0"
log = "0.4.25"
num-traits = "0.2.19"
num-bigint = "0.4.6"
openssl = "0.10.68"
percentage = "0.1.0"
scopeguard = "1.2.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde-big-array = "0.5.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
solana-account = "2.1.10"
solana-runtime = "2.1.10"
solana-sdk = "2.1.10"
solana-sbpf = "=0.9.0"
sp1-zkvm = "4.0.1"
thiserror = "1.0.69"

[patch.crates-io]
getrandom = { git = "https://github.com/nitro-svm/getrandom", branch = "0.1-zkvm" }
# libc = { git = "https://github.com/rust-lang/libc.git" }
