[package]
name = "deterministic_svm"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true, features = ["traits-preview"] }
bs58 = { workspace = true, features = ["alloc"] }
bytemuck = { workspace = true, features = ["derive"] }
byteorder = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
ecdsa = { workspace = true }
enum-iterator = { workspace = true }
five8_const = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
libsecp256k1 = { workspace = true }
light-poseidon = { workspace = true }
log = { workspace = true }
# openssl = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
p256 = { workspace = true }
percentage = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde-big-array = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
solana-sbpf = { workspace = true }
thiserror = { workspace = true }
