[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenv = { workspace = true }
deterministic_svm = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = [
    "alloc",
] }
solana-sdk = { workspace = true }
sp1-sdk = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
