[package]
name = "zk_svm"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
sp1-zkvm = { workspace = true }
solana-sdk = { workspace = true }
solana-runtime = { workspace = true }
block_builder = { path = "../block_builder" }
merkle_tree = { path = "../merkle_tree" }
